--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
   "packageManager": "npm@10.7.0",
   "scripts": {
     "serverize": "NODE_ENV=development node --watch-path=build ./node_modules/.bin/remote deploy -k nodejs",
-    "build:watch": "cross-env NODE_NO_WARNINGS=1 npx nodemon --ext=ts,md --watch . --ignore build/ --exec 'npm run deploy'",
     "scripts:release-post": "cross-env NODE_NO_WARNINGS=1 node scripts/release-post/index.mjs",
     "dev": "cross-env NODE_NO_WARNINGS=1 next dev",
     "serve": "npm run dev",
-    "build": "cross-env NODE_NO_WARNINGS=1 next build",
+    "build": "cross-env NEXT_PUBLIC_STATIC_EXPORT=true NODE_NO_WARNINGS=1 next build",
     "start": "cross-env NODE_NO_WARNINGS=1 next start",
-    "deploy": "cross-env NEXT_PUBLIC_STATIC_EXPORT=true npm run build",
     "lint:js": "eslint \"**/*.{js,mjs,ts,tsx}\" --cache --cache-strategy=content --cache-location=.eslintjscache",
     "lint:md": "eslint \"**/*.md?(x)\" --cache --cache-strategy=content --cache-location=.eslintmdcache",
     "lint:css": "stylelint \"**/*.css\" --allow-empty-input --cache --cache-strategy=content --cache-location=.stylelintcache",
