--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,30 @@
+**/node_modules/
+**/.git
+**/README.md
+**/LICENSE
+**/.vscode
+**/.idea
+**/npm-debug.log
+**/coverage*
+**/.env
+**/.editorconfig
+**/.aws
+**/dist
+**/build
+**/.output
+**/output
+**/tmp
+**/test-results
+**/tests
+**/__tests__
+**/docs
 .dockerignore
-node_modules
-npm-debug.log
-README.md
+docker-compose*
+.gitignore
+Dockerfile*
+Jenkinsfile*
+helm-charts
+Makefile
+Thumbs.db
+.DS_Store
 .next
-docker
-.git
